hotfix some issues with img aligning

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -4,7 +4,7 @@
 
   &__img {
     display: block;
-    justify-self: center;
+    margin: 0 auto;
 
     transition: transform $default-transition;
 
@@ -22,9 +22,7 @@
         width: 187px;
         height: 187px;
       }
-    }
 
-    &--details--s {
       @include on-desktop {
         width: 320px;
         height: 320px;
@@ -36,9 +34,7 @@
         width: 392px;
         height: 187px;
       }
-    }
 
-    &--details--l {
       @include on-desktop {
         width: 672px;
         height: 320px;
