--- a/src/styles/blocks/content-box.scss
+++ b/src/styles/blocks/content-box.scss
@@ -1,6 +1,7 @@
 .content-box {
   @include inline-padding;
 
+  margin-bottom: 92px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -57,10 +58,6 @@
       grid-template-columns: repeat(2, 1fr);
       column-gap: 24px;
     }
-  }
-
-  & {
-    margin-bottom: 92px;
   }
 
   &:first-child {
